Added Authentication With Firebase

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -9,7 +9,7 @@
       *ngFor="let item of ingredients; let i = index"
       (click)="onEditItem(i)"
       >
-        {{item.name}} ({{item.amount}})
+        {{item.ingName}} ({{item.amount}})
       </a>
     </ul>
   </div>
