--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,53 @@
 <nav class="navbar navbar-default bg-dark">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a routerLink='/recipes' class="navbar-brand">Recipe Book</a>
-        </div>
-        
-        <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                        <li class="nav-item" routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-                        <li class="nav-item" routerLinkActive="active"><a routerLink="/shoppingList">Shopping List</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <div class="dropdown"appDropDownDirective>
-                            <button class="btn btn-primary" style="margin-top: 5px;">Manage
-                            <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                            <li><a style="cursor: pointer;">Save Data</a></li>
-                            <li><a style="cursor: pointer;">Fetch Data</a></li>
-                            
-                            </ul>
-                        </div>
-                </ul>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a routerLink="/recipes" class="navbar-brand">Recipe Book</a>
+    </div>
 
-        </div>
-        
-        
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="/recipes">Recipes</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="/shoppingList">Shopping List</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+          <li>
+            <a routerLink="/signup">Sign Up</a>
+          </li>
+          <li>
+            <a routerLink="/signin">Login</a>
+          </li>
+        </ng-template>
+        <li>
+          <a
+            style="cursor: pointer"
+            (click)="logout()"
+            *ngIf="authService.isAuthenticated()"
+            >Logout
+          </a>
+        </li>
+        <li
+          class="dropdown"
+          appDropDownDirective
+          *ngIf="authService.isAuthenticated()"
+        >
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button"
+            >Manage <span class="caret"></span
+          ></a>
+          <ul class="dropdown-menu">
+            <li>
+              <a style="cursor: pointer;" (click)="onSave()">Save Data</a>
+            </li>
+            <li>
+              <a style="cursor: pointer;" (click)="onFetch()">Fetch Data</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
