--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!isAuthenticated()">
           <li>
             <a routerLink="/signup">Sign Up</a>
           </li>
@@ -26,14 +26,14 @@
           <a
             style="cursor: pointer"
             (click)="logout()"
-            *ngIf="authService.isAuthenticated()"
+            *ngIf="isAuthenticated()"
             >Logout
           </a>
         </li>
         <li
           class="dropdown"
           appDropDownDirective
-          *ngIf="authService.isAuthenticated()"
+          *ngIf="isAuthenticated()"
         >
           <a style="cursor: pointer;" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
