--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -53,7 +53,7 @@
 
       <div class="row mar-top-20">
         <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row" *ngFor="let item of recipeEditForm.get('ingredients').controls; let i = index" 
+          <div class="row" *ngFor="let item of getControl(); let i = index" 
             [formGroupName]="i"
             style="margin-top: 10px;">
             <div class="form-group">
